more css, trying to fix white spaces

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,5 @@
 }
 
 .app {
-  height: 100%;
   position: relative;
 }
