--- a/src/components/LoginForm.css
+++ b/src/components/LoginForm.css
@@ -42,10 +42,10 @@
 }
 
 #doggy-paw {
-  height: 55px;
-  width: 100px;
+  height: 73px;
+  width: 150px;
   position: absolute;
-  top: 8px;
+  top: 1px;
   left: 0;
 }
 
